# ros-training

./: .gitignore
src/battery_indicator/: CMakeLists.txt  README.md
src/battery_indicator/launch/: autocharging.launch  autocharging_cpp.launch
src/battery_indicator/src/: autocharging_node.cpp  autocharging_node.py
src/turtle_move/: CMakeLists.txt  package.xml
src/turtle_move/launch/: move_straight.launch  move_to.launch
src/turtle_move/src/: move_straight.cpp  move_to.cpp
src/turtle_move/srv/: MoveStraight.srv  MoveTo.srv
